[project]
name = "htvpy"
version = "0.1"
description = "An API for HTV"
authors = [{name = "Egsagon", email = "egsagon.git@gmail.com"}]
license = {file = "LICENSE"}
readme = {file = "pypi.md", content-type = "text/markdown"}
keywords = ["htv", "hentai", "web scrapper", "api wrapper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = ["requests"]
requires-python = ">=3.11"

[project.optional-dependencies]
cli = ["click"]

[project.urls]
Documentation = "https://htvpy.readthedocs.io"
Repository = "https://github.com/Egsagon/htv"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]